# misra-1983

./: CMakeLists.txt  README.md  header.h  main.cpp
